# app/server/app/server/routes/api.js
@@ -2,6 +2,7 @@ const axios = require('axios');
 const express = require('express');
 const { readFile } = require('node:fs/promises');
 const path = require('node:path');
+const { getEnvironment } = require('../utilities/environment');
 const logger = require('../utilities/logger');
 const log = logger.logger;
 
@@ -56,21 +57,22 @@ module.exports = function (app) {
   function getFiles(req, res, filenames, dataMapper) {
     const metadataObj = logger.populateMetdataObjFromRequest(req);
 
-    const isLocal = app.enabled('isLocal');
+    const { isLocal, isTest } = getEnvironment();
+    const isLocalTest = isLocal || isTest;
     const s3BucketUrl = app.get('s3_bucket_url');
 
     const promise =
       filenames.length > 1
         ? Promise.all(
             filenames.map((filename) => {
-              return getFile(s3BucketUrl, filename, isLocal);
+              return getFile(s3BucketUrl, filename, isLocalTest);
             }),
           )
-        : getFile(s3BucketUrl, filenames[0], isLocal);
+        : getFile(s3BucketUrl, filenames[0], isLocalTest);
 
     promise
       .then((stringsOrResponses) => {
-        return parseResponse(stringsOrResponses, isLocal);
+        return parseResponse(stringsOrResponses, isLocalTest);
       })
       .then((data) => {
         if (dataMapper) return dataMapper(data);
@@ -78,13 +80,17 @@ module.exports = function (app) {
       })
       .then((data) => res.json(data))
       .catch((error) => {
-        logError(error, metadataObj, isLocal);
+        logError(error, metadataObj, isLocalTest);
 
         return res
           .status(error?.response?.status || 500)
           .json({ message: 'Error getting static content from S3 bucket' });
       });
   }
+
+  router.get('/health', function (req, res, next) {
+    res.json({ status: 'UP' });
+  });
 
   // --- get static content from S3
   router.get('/lookupFiles', (req, res) => {
@@ -119,21 +125,29 @@ module.exports = function (app) {
   router.get('/userGuide', (req, res) => {
     const metadataObj = logger.populateMetdataObjFromRequest(req);
 
-    const isLocal = app.enabled('isLocal');
+    const { isLocal, isTest } = getEnvironment();
+    const isLocalTest = isLocal || isTest;
     const s3BucketUrl = app.get('s3_bucket_url');
 
-    getFile(s3BucketUrl, 'data/documents/TOTS-Users-Guide.pdf', isLocal)
+    getFile(s3BucketUrl, 'data/documents/TOTS-Users-Guide.pdf', isLocalTest)
       .then((data) => {
         res.contentType('application/pdf');
         res.send(data);
       })
       .catch((error) => {
-        logError(error, metadataObj, isLocal);
+        logError(error, metadataObj, isLocalTest);
 
         return res
           .status(error?.response?.status || 500)
           .json({ message: 'Error getting static content from S3 bucket' });
       });
+  });
+
+  router.get('/*', (req, res) => {
+    res.status(404).json({ message: 'The api route does not exist.' });
+  });
+  router.post('/*', (req, res) => {
+    res.status(404).json({ message: 'The api route does not exist.' });
   });
 
   app.use('/api', router);
